test/parsetest/valid/new_array_and_object.java
class A {
    public int[] a(String a, String b, String[][][][][][][][] c){
        return;
        int[][][][] a = new String[3][][][];
        a = new String[3];
        a[345+4356/345] = new String[3/*sdf*/][][][];
        new Object().bla.adfg()[435 + !a()[4]];
    }
}