test/parsetest/invalid/return_assignment.java
/*Unable to return a LocalVariableDeclarationStatement*/
class Main{
	public int main(String integer){
		int b = 3;
		return int a = b;
	}
}